add api profile user
